--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -16,6 +16,7 @@
         <strong>Version 0.6.1</strong>
         <ul>
             <li><b>Features</b></li>
+            <li>Fixes reformat bug after removing text when refactoring to include file.</li>
             <li>Correctly parses advanced versions of loop, with and control.</li>
             <li>"<" is no longer interpreted as a bad character</li>
             <li>Typing "{" should now consistently yield "{$}"</li>
