--- a/resources/messages/SilverStripeBundle.properties
+++ b/resources/messages/SilverStripeBundle.properties
@@ -6,10 +6,10 @@ ss.parsing.unexpected.end.statement.expected=Unexpected end statement. Expected 
 ss.parsing.bad.block.statement=This statement is currently not recognized by the parser. If you think this is a bug report it at https://github.com/raket/idea-silverstripe/issues/new
 ss.file.template.group.title.silverstripe=SilverStripe file templates
 ss.newfile.dialog.prompt=Create a new SilverStripe file
-ss.newfile.dialog.title=Create SilverStripe file
+ss.newfile.dialog.title=Create SilverStripe File
 ss.newfile.command.name=SilverStripe file
-ss.newfile.menu.action.text=Create SilverStripe file
-ss.newfile.menu.action.description=Creates a new SilverStripe file
+ss.newfile.menu.action.text=Create SilverStripe File
+ss.newfile.menu.action.description=Creates a new SilverStripe File
 ss.annotations.file.not.found=Could not find include file "{0}".
 ss.annotations.translation.no.identifier=Missing identifier in translation tag
 ss.annotations.translation.no.parameter.match=The parameters do not match up. Please add "{0}".
