--- a/resources/messages/SilverStripeBundle.properties
+++ b/resources/messages/SilverStripeBundle.properties
@@ -13,3 +13,5 @@ ss.newfile.menu.action.description=Creates a new SilverStripe File
 ss.annotations.file.not.found=Could not find include file "{0}".
 ss.annotations.translation.no.identifier=Missing identifier in translation tag
 ss.annotations.translation.no.parameter.match=The parameters do not match up. Please add "{0}".
+ss.annotations.freestring.var=This variable is missing $. Either turn it into a string or add the $.
+ss.annotations.comparison.not.supported=< and > operators are only supported in SilverStripe 3.1 and up.
