--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -136,6 +136,9 @@
 
     <project-components>
         <!-- Add your project components here -->
+        <component>
+            <implementation-class>com.raket.silverstripe.project.SilverStripeProjectComponent</implementation-class>
+        </component>
     </project-components>
 
     <actions>
