--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -15,6 +15,12 @@
     <category>Custom Languages</category>
     <change-notes>
         <![CDATA[
+         <strong>Version 0.7.2</strong>
+        <ul>
+            <li><b>Features</b></li>
+            <li>Project component for tracking SilverStripe version</li>
+            <li>Readded refactor to include insertion of include tag</li>
+        </ul>
         <strong>Version 0.7.1</strong>
         <ul>
             <li><b>Features</b></li>
