--- a/resources/messages/SilverStripeBundle.properties
+++ b/resources/messages/SilverStripeBundle.properties
@@ -1,5 +1,6 @@
 ss.parsing.bad.var=Bad variable. Check your syntax.
 ss.parsing.missing.delimiter=Incomplete var statement. Add closing delimiter.
+ss.parsing.unclosed.statement=Unclosed statement. Please close "{0}" statement.
 ss.parsing.unclosed.block=Unclosed block statement. Please close "{0}" block.
 ss.parsing.unexpected.end.statement=Unexpected end statement.
 ss.parsing.unexpected.end.statement.expected=Unexpected end statement. Expected "{0}".
