--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2" url="https://github.com/raket/idea-silverstripe">
     <id>com.raket.silverstripe</id>
     <name>SilverStripe Template Language Support</name>
-    <version>0.7.2</version>
+    <version>0.8</version>
     <vendor logo="/icons/raket.png" email="marcus@raket.nu" url="https://github.com/raket/idea-silverstripe">Raket
         Webbyrå
     </vendor>
@@ -15,6 +15,12 @@
     <category>Custom Languages</category>
     <change-notes>
         <![CDATA[
+         <strong>Version 0.8</strong>
+        <ul>
+            <li><b>Features</b></li>
+            <li>Variables are named elements</li>
+            <li>Variable resolves. Ctrl+click will now try to resolve to a method with that name or a method prefixed by get.</li>
+        </ul>
          <strong>Version 0.7.2</strong>
         <ul>
             <li><b>Features</b></li>
