--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -19,6 +19,7 @@
         <ul>
             <li><b>Features</b></li>
             <li>Total parser rewrite</li>
+            <li>Surround descriptors. By pressing ctrl+alt+t you can surround selected text with either an if, loop or with statement.</li>
         </ul>
         <strong>Version 0.8</strong>
         <ul>
