--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2" url="https://github.com/raket/idea-silverstripe">
     <id>com.raket.silverstripe</id>
     <name>SilverStripe Template Language Support</name>
-    <version>0.8.2</version>
+    <version>0.9</version>
     <vendor logo="/icons/raket.png" email="marcus@raket.nu" url="https://github.com/raket/idea-silverstripe">Raket
         Webbyrå
     </vendor>
@@ -15,21 +15,18 @@
     <category>Custom Languages</category>
     <change-notes>
         <![CDATA[
-        <strong>Version 0.8.3</strong>
+        <strong>Version 0.9</strong>
         <ul>
             <li><b>Features</b></li>
+            <li>PHPStorm 6.0.1+ only</li>
+            <li>Total parser rewrite</li>
+            <li>Theme dir and theme file resolves</li>
             <li>Fix bug in translation identifiers</li>
             <li>Expanded variable resolves. Ctrl+clicking variables now also checks the db, has_one, has_many, many_many and belongs_many_many arrays.</li>
-        </ul>
-        <strong>Version 0.8.2</strong>
-        <ul>
-            <li><b>Features</b></li>
-            <li>Theme dir and theme file resolves</li>
         </ul>
         <strong>Version 0.8.1</strong>
         <ul>
             <li><b>Features</b></li>
-            <li>Total parser rewrite</li>
             <li>Surround descriptors. By pressing ctrl+alt+t you can surround selected text with either an if, loop or with statement.</li>
         </ul>
         <strong>Version 0.8</strong>
