Turn off $ creation

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2" url="https://github.com/raket/idea-silverstripe">
     <id>com.raket.silverstripe</id>
     <name>SilverStripe Template Language Support</name>
-    <version>0.9.1.2</version>
+    <version>0.9.2.1</version>
     <vendor logo="/icons/raket.png" email="marcus@raket.nu" url="https://github.com/raket/idea-silverstripe">Raket
         Webbyrå
     </vendor>
@@ -15,6 +15,16 @@
     <category>Custom Languages</category>
     <change-notes>
         <![CDATA[
+        <strong>Version 0.9.2.1</strong>
+        <ul>
+            <li><b>Bugfixes</b></li>
+            <li>Attempt to fix enter bug.</li>
+        </ul>
+        <strong>Version 0.9.2.0</strong>
+        <ul>
+            <li><b>Changes</b></li>
+            <li>Remove the automatic $ creation</li>
+        </ul>
         <strong>Version 0.9.1.2</strong>
         <ul>
             <li><b>Bugfixes</b></li>
@@ -217,7 +227,7 @@
         <lang.foldingBuilder language="SilverStripe"
                              implementationClass="com.raket.silverstripe.editor.folding.SilverStripeFoldingBuilder"/>
         <typedHandler implementation="com.raket.silverstripe.editor.actions.SilverStripeTypedHandler"/>
-        <enterHandlerDelegate implementation="com.raket.silverstripe.editor.actions.SilverStripeEnterHandler"/>
+        <!--<enterHandlerDelegate implementation="com.raket.silverstripe.editor.actions.SilverStripeEnterHandler"/>-->
         <spellchecker.support language="SilverStripe"
                               implementationClass="com.intellij.spellchecker.tokenizer.SpellcheckingStrategy"/>
         <completion.contributor language="SilverStripe"
